[metadata]
name = fabulous-paths
version = 0.0.1
description = Tools for integrating OpenPathSampling and FABULOUS
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson and Ferry Hooft
author_email = dwhs@hyperblazer.net
license = LGPL 3.0+
url = https://github.com/dwhswenson/fabulous-paths
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
include_package_data = True
install_requires =
    openpathsampling-cli
    # fabulous-md
packages = fabulous_paths
namespace_packages = paths_cli_plugins

[bdist_wheel]
universal=1
